...
        title: String,
        createdDate: Date = Date(),
        household: CDHousehold? = nil
    ) -> CDOneOff {
        let oneOff = CDOneOff(context: ctx)
        oneOff.id = id
        oneOff.title = title
        oneOff.createdDate = createdDate
        oneOff.household = household
        return oneOff
    }
}

